file compress and change space to tab