@@ -30,201 +30,200 @@ import static hu.kozma.backend.repository.FileSystemRepository.getImages;
 @AllArgsConstructor
 public class AccommodationService {
 
-    private final AccommodationRepository accommodationRepository;
-    private final FileSystemRepository fileSystemRepository;
-    private final UserRepository userRepository;
-    private final ReservationRepository reservationRepository;
+	private final AccommodationRepository accommodationRepository;
+	private final FileSystemRepository fileSystemRepository;
+	private final UserRepository userRepository;
+	private final ReservationRepository reservationRepository;
 
-    public void saveAccommodation(SaveAccommodationDTO accommodationDTO, List<MultipartFile> multipartFiles, String name) throws IOException {
-        User user = userRepository.findUserByEmail(name).orElseThrow(() -> new EntityNotFoundException("A felhasználó nem található!"));
+	public static Boolean isWithinRange(LocalDate date, AnnounceDate announceDate) {
+		return !(date.isBefore(announceDate.getStartDate()) || date.isAfter(announceDate.getEndDate()));
+	}
 
-        Accommodation accommodation = AccommodationMapper.toAccommodation(accommodationDTO);
-        accommodation.addImage(new Image(fileSystemRepository.save(multipartFiles.get(0), name, 0), true));
-        for (int i = 1; i < multipartFiles.size(); i++)
-            accommodation.addImage(new Image(fileSystemRepository.save(multipartFiles.get(i), name, i), false));
-        accommodation.setUser(user);
-        accommodationRepository.save(accommodation);
-    }
+	public void saveAccommodation(SaveAccommodationDTO accommodationDTO, List<MultipartFile> multipartFiles, String name) throws IOException {
+		User user = userRepository.findUserByEmail(name).orElseThrow(() -> new EntityNotFoundException("A felhasználó nem található!"));
 
-    public List<AccommodationDTO> getAccommodations(SearchAccommodationDTO searchAccommodationDTO) {
-        List<Accommodation> accommodations = accommodationRepository.findFiltered(
-                searchAccommodationDTO.getName(),
-                searchAccommodationDTO.getAddress(),
-                searchAccommodationDTO.getGuests());
+		Accommodation accommodation = AccommodationMapper.toAccommodation(accommodationDTO);
+		accommodation.addImage(new Image(fileSystemRepository.save(multipartFiles.get(0), name, 0), true));
+		for (int i = 1; i < multipartFiles.size(); i++)
+			accommodation.addImage(new Image(fileSystemRepository.save(multipartFiles.get(i), name, i), false));
+		accommodation.setUser(user);
+		accommodationRepository.save(accommodation);
+	}
 
-        LocalDate startDateFilter = MapperUtils.toDate(searchAccommodationDTO.getFromDate());
-        LocalDate endDateFilter = MapperUtils.toDate(searchAccommodationDTO.getEndDate());
+	public List<AccommodationDTO> getAccommodations(SearchAccommodationDTO searchAccommodationDTO) {
+		List<Accommodation> accommodations = accommodationRepository.findFiltered(
+				searchAccommodationDTO.getName(),
+				searchAccommodationDTO.getAddress(),
+				searchAccommodationDTO.getGuests());
 
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
+		LocalDate startDateFilter = MapperUtils.toDate(searchAccommodationDTO.getFromDate());
+		LocalDate endDateFilter = MapperUtils.toDate(searchAccommodationDTO.getEndDate());
 
-        if (!Optional.ofNullable(searchAccommodationDTO.getShowOwn()).orElse(true) && email != null) {
-            accommodations = accommodations.stream().filter(accommodation -> !accommodation.getUser().getEmail().equals(email)).toList();
-        }
+		String email = SecurityContextHolder.getContext().getAuthentication().getName();
 
-        if (startDateFilter != null && endDateFilter != null)
-            accommodations = filterAccommodationsByDate(accommodations, startDateFilter, endDateFilter);
-        else if (startDateFilter != null)
-            accommodations = filterAccommodationsByStartDate(accommodations, startDateFilter);
-        else if (endDateFilter != null) accommodations = filterAccommodationsByEndDate(accommodations, endDateFilter);
+		if (!Optional.ofNullable(searchAccommodationDTO.getShowOwn()).orElse(true) && email != null) {
+			accommodations = accommodations.stream().filter(accommodation -> !accommodation.getUser().getEmail().equals(email)).toList();
+		}
 
-        return accommodations.stream().map(accommodation -> {
-            AccommodationDTO accommodationDTO = AccommodationMapper.toAccommodationDTO(accommodation);
-            accommodationDTO.setMainImage(getImage(accommodation.getMainImage()));
-            return accommodationDTO;
-        }).toList();
-    }
+		if (startDateFilter != null && endDateFilter != null)
+			accommodations = filterAccommodationsByDate(accommodations, startDateFilter, endDateFilter);
+		else if (startDateFilter != null)
+			accommodations = filterAccommodationsByStartDate(accommodations, startDateFilter);
+		else if (endDateFilter != null) accommodations = filterAccommodationsByEndDate(accommodations, endDateFilter);
 
-    public List<AccommodationDTO> getAccommodations(String email) {
-        return accommodationRepository.findByUserEmail(email).stream()
-                .map(accommodation -> {
-                    AccommodationDTO accommodationDTO = AccommodationMapper.toAccommodationDTO(accommodation);
-                    accommodationDTO.setMainImage(getImage(accommodation.getMainImage()));
-                    return accommodationDTO;
-                }).toList();
-    }
+		return accommodations.stream().map(accommodation -> {
+			AccommodationDTO accommodationDTO = AccommodationMapper.toAccommodationDTO(accommodation);
+			accommodationDTO.setMainImage(getImage(accommodation.getMainImage()));
+			return accommodationDTO;
+		}).toList();
+	}
 
-    private List<Accommodation> filterAccommodationsByDate(List<Accommodation> accommodations, LocalDate start, LocalDate end) {
-        return accommodations.stream().filter(accommodation ->
-                getMergedAnnounceDates(accommodation.getAnnounces()).stream().anyMatch(announceDate ->
-                        isWithinRange(start, announceDate) && isWithinRange(end, announceDate))
-        ).collect(Collectors.toList());
-    }
+	public List<AccommodationDTO> getAccommodations(String email) {
+		return accommodationRepository.findByUserEmail(email).stream()
+				.map(accommodation -> {
+					AccommodationDTO accommodationDTO = AccommodationMapper.toAccommodationDTO(accommodation);
+					accommodationDTO.setMainImage(getImage(accommodation.getMainImage()));
+					return accommodationDTO;
+				}).toList();
+	}
 
-    private List<Accommodation> filterAccommodationsByStartDate(List<Accommodation> accommodations, LocalDate start) {
-        return accommodations.stream().filter(accommodation ->
-                getMergedAnnounceDates(accommodation.getAnnounces()).stream().anyMatch(announceDate ->
-                        isWithinRange(start, announceDate))
-        ).collect(Collectors.toList());
-    }
+	private List<Accommodation> filterAccommodationsByDate(List<Accommodation> accommodations, LocalDate start, LocalDate end) {
+		return accommodations.stream().filter(accommodation ->
+				getMergedAnnounceDates(accommodation.getAnnounces()).stream().anyMatch(announceDate ->
+						isWithinRange(start, announceDate) && isWithinRange(end, announceDate))
+		).collect(Collectors.toList());
+	}
 
-    private List<Accommodation> filterAccommodationsByEndDate(List<Accommodation> accommodations, LocalDate end) {
-        return accommodations.stream().filter(accommodation ->
-                getMergedAnnounceDates(accommodation.getAnnounces()).stream().anyMatch(announceDate ->
-                        isWithinRange(end, announceDate))
-        ).collect(Collectors.toList());
-    }
+	private List<Accommodation> filterAccommodationsByStartDate(List<Accommodation> accommodations, LocalDate start) {
+		return accommodations.stream().filter(accommodation ->
+				getMergedAnnounceDates(accommodation.getAnnounces()).stream().anyMatch(announceDate ->
+						isWithinRange(start, announceDate))
+		).collect(Collectors.toList());
+	}
 
-    public List<AnnounceDate> getMergedAnnounceDates(List<AnnounceDate> announceDates) {
-        if (announceDates.size() < 2)
-            return announceDates;
+	private List<Accommodation> filterAccommodationsByEndDate(List<Accommodation> accommodations, LocalDate end) {
+		return accommodations.stream().filter(accommodation ->
+				getMergedAnnounceDates(accommodation.getAnnounces()).stream().anyMatch(announceDate ->
+						isWithinRange(end, announceDate))
+		).collect(Collectors.toList());
+	}
 
-        List<AnnounceDate> mergedAnnounceDates = new ArrayList<>();
-        LocalDate startDate;
-        LocalDate endDate;
-        for (int i = 0; i < announceDates.size(); i++) {
-            startDate = announceDates.get(i).getStartDate();
-            endDate = announceDates.get(i).getEndDate();
-            while (i + 1 < announceDates.size() && announceDates.get(i + 1).getStartDate().equals(endDate.plusDays(1))) {
-                endDate = announceDates.get(++i).getEndDate();
-            }
-            mergedAnnounceDates.add(AnnounceDate.builder().startDate(startDate).endDate(endDate).build());
-        }
-        return mergedAnnounceDates;
-    }
+	public List<AnnounceDate> getMergedAnnounceDates(List<AnnounceDate> announceDates) {
+		if (announceDates.size() < 2)
+			return announceDates;
 
-    public static Boolean isWithinRange(LocalDate date, AnnounceDate announceDate) {
-        return !(date.isBefore(announceDate.getStartDate()) || date.isAfter(announceDate.getEndDate()));
-    }
+		List<AnnounceDate> mergedAnnounceDates = new ArrayList<>();
+		LocalDate startDate;
+		LocalDate endDate;
+		for (int i = 0; i < announceDates.size(); i++) {
+			startDate = announceDates.get(i).getStartDate();
+			endDate = announceDates.get(i).getEndDate();
+			while (i + 1 < announceDates.size() && announceDates.get(i + 1).getStartDate().equals(endDate.plusDays(1))) {
+				endDate = announceDates.get(++i).getEndDate();
+			}
+			mergedAnnounceDates.add(AnnounceDate.builder().startDate(startDate).endDate(endDate).build());
+		}
+		return mergedAnnounceDates;
+	}
 
-    public AccommodationDetailsDTO getAccommodation(Long id) {
-        Accommodation accommodation = accommodationRepository.findById(id).orElseThrow(EntityNotFoundException::new);
-        AccommodationDetailsDTO accommodationDetailsDTO = AccommodationMapper.toAccommodationDetailsDTO(accommodation);
-        accommodationDetailsDTO.setImages(getImages(accommodation.getImages()));
-        accommodationDetailsDTO.setReservedDays(getReservedDays(accommodation));
-        return accommodationDetailsDTO;
-    }
+	public AccommodationDetailsDTO getAccommodation(Long id) {
+		Accommodation accommodation = accommodationRepository.findById(id).orElseThrow(EntityNotFoundException::new);
+		AccommodationDetailsDTO accommodationDetailsDTO = AccommodationMapper.toAccommodationDetailsDTO(accommodation);
+		accommodationDetailsDTO.setImages(getImages(accommodation.getImages()));
+		accommodationDetailsDTO.setReservedDays(getReservedDays(accommodation));
+		return accommodationDetailsDTO;
+	}
 
-    private Double calculatePrice(Reservation reservation, Accommodation accommodation) {
-        return reservation.getStartDate().datesUntil(reservation.getEndDate().plusDays(1))
-                .mapToDouble(date -> getPriceForDay(date, accommodation))
-                .reduce(0, Double::sum);
-    }
+	private Double calculatePrice(Reservation reservation, Accommodation accommodation) {
+		return reservation.getStartDate().datesUntil(reservation.getEndDate().plusDays(1))
+				.mapToDouble(date -> getPriceForDay(date, accommodation))
+				.reduce(0, Double::sum);
+	}
 
-    private Double getPriceForDay(LocalDate date, Accommodation accommodation) {
-        return accommodation.getAnnounces().stream().filter(announceDate -> isWithinRange(date, announceDate))
-                .findAny()
-                .orElseThrow()
-                .getPrice();
-    }
-
-
-
-    public void deleteAccommodation(Long id, String name) {
-        Accommodation accommodation = accommodationRepository.findById(id).orElseThrow();
-        if (!accommodation.getUser().getEmail().equals(name)) {
-            throw new IllegalArgumentException();
-        }
-        if (accommodation.getReservations().stream().anyMatch(reservation -> !reservation.isExpired())) {
-            //TODO exception arra, hogy nem törli, amíg van aktív foglalás
-            throw new IllegalArgumentException();
-        }
-        accommodationRepository.delete(accommodation);
-    }
-
-    public List<Long> getReservedDays(Accommodation accommodation) {
-        List<Long> reservedDays = new ArrayList<>();
-        accommodation.getReservations().forEach(reservation -> {
-            LocalDate current = reservation.getStartDate();
-            while (current.isBefore(reservation.getEndDate()) || current.isEqual(reservation.getEndDate())) {
-                reservedDays.add(MapperUtils.toLongDate(current));
-                current = current.plusDays(1);
-            }
-        });
-        return reservedDays;
-    }
-
-    public void modifyAccommodation(UpdateAccommodationDTO accommodationDTO, List<MultipartFile> multipartFiles, Integer mainImageIndex, String name) throws IOException, AnnounceDateConflict {
-        Accommodation accommodation = AccommodationMapper.toAccommodation(accommodationDTO);
-        Accommodation old = accommodationRepository.findById(accommodation.getId()).orElseThrow();
-        if (!old.getName().equals(accommodation.getName())) {
-            old.setName(accommodation.getName());
-        }
-        if (!old.getAddress().equals(accommodation.getAddress())) {
-            old.setAddress(accommodation.getAddress());
-        }
-        if (!old.getFloor().equals(accommodation.getFloor())) {
-            old.setFloor(accommodation.getFloor());
-        }
-        if (!old.getDoor().equals(accommodation.getDoor())) {
-            old.setDoor(accommodation.getDoor());
-        }
-        if (!old.getLat().equals(accommodation.getLat())) {
-            old.setLat(accommodation.getLat());
-        }
-        if (!old.getLng().equals(accommodation.getLng())) {
-            old.setLng(accommodation.getLng());
-        }
-        if (!old.getDescription().equals(accommodation.getDescription())) {
-            old.setDescription(accommodation.getDescription());
-        }
-        if (!old.getMaxGuests().equals(accommodation.getMaxGuests())) {
-            old.setMaxGuests(accommodation.getMaxGuests());
-        }
-
-        old.deleteImages();
-        old.setImages(new HashSet<>());
-        for (int i = 0; i < multipartFiles.size(); i++)
-            old.addImage(new Image(fileSystemRepository.save(multipartFiles.get(i), name, i), i == mainImageIndex));
+	private Double getPriceForDay(LocalDate date, Accommodation accommodation) {
+		return accommodation.getAnnounces().stream().filter(announceDate -> isWithinRange(date, announceDate))
+				.findAny()
+				.orElseThrow()
+				.getPrice();
+	}
 
 
-        List<AnnounceDate> newAnnounceDates = accommodation.getAnnounces();
-        for (AnnounceDate announceDate : old.getAnnounces()) {
-            if (!accommodation.getAnnounces().contains(announceDate)) {
-                if (old.getReservations().stream()
-                        .anyMatch(reservation ->
-                                reservation.getStartDate().isAfter(announceDate.getStartDate().minusDays(1))
-                                        && reservation.getEndDate().isBefore(announceDate.getEndDate().plusDays(1))
-                                        && !reservation.isExpired())) {
-                    throw new AnnounceDateConflict("Nem tudsz olyan meghírdetett időpontot megváltoztatni, amire van érvényes foglalás!");
-                }
-            }
-        }
-        old.deleteAnnounceDates();
-        old.setAnnounces(newAnnounceDates);
-        accommodationRepository.save(old);
-    }
+	public void deleteAccommodation(Long id, String name) {
+		Accommodation accommodation = accommodationRepository.findById(id).orElseThrow();
+		if (!accommodation.getUser().getEmail().equals(name)) {
+			throw new IllegalArgumentException();
+		}
+		if (accommodation.getReservations().stream().anyMatch(reservation -> !reservation.isExpired())) {
+			//TODO exception arra, hogy nem törli, amíg van aktív foglalás
+			throw new IllegalArgumentException();
+		}
+		accommodationRepository.delete(accommodation);
+	}
 
-    public void deleteAnnounce(AnnounceDate announceDate) {
+	public List<Long> getReservedDays(Accommodation accommodation) {
+		List<Long> reservedDays = new ArrayList<>();
+		accommodation.getReservations().forEach(reservation -> {
+			LocalDate current = reservation.getStartDate();
+			while (current.isBefore(reservation.getEndDate()) || current.isEqual(reservation.getEndDate())) {
+				reservedDays.add(MapperUtils.toLongDate(current));
+				current = current.plusDays(1);
+			}
+		});
+		return reservedDays;
+	}
 
-    }
+	public void modifyAccommodation(UpdateAccommodationDTO accommodationDTO, List<MultipartFile> multipartFiles, Integer mainImageIndex, String name) throws IOException, AnnounceDateConflict {
+		Accommodation accommodation = AccommodationMapper.toAccommodation(accommodationDTO);
+		Accommodation old = accommodationRepository.findById(accommodation.getId()).orElseThrow();
+		if (!old.getName().equals(accommodation.getName())) {
+			old.setName(accommodation.getName());
+		}
+		if (!old.getAddress().equals(accommodation.getAddress())) {
+			old.setAddress(accommodation.getAddress());
+		}
+		if (!old.getFloor().equals(accommodation.getFloor())) {
+			old.setFloor(accommodation.getFloor());
+		}
+		if (!old.getDoor().equals(accommodation.getDoor())) {
+			old.setDoor(accommodation.getDoor());
+		}
+		if (!old.getLat().equals(accommodation.getLat())) {
+			old.setLat(accommodation.getLat());
+		}
+		if (!old.getLng().equals(accommodation.getLng())) {
+			old.setLng(accommodation.getLng());
+		}
+		if (!old.getDescription().equals(accommodation.getDescription())) {
+			old.setDescription(accommodation.getDescription());
+		}
+		if (!old.getMaxGuests().equals(accommodation.getMaxGuests())) {
+			old.setMaxGuests(accommodation.getMaxGuests());
+		}
+
+		old.deleteImages();
+		old.setImages(new HashSet<>());
+		for (int i = 0; i < multipartFiles.size(); i++)
+			old.addImage(new Image(fileSystemRepository.save(multipartFiles.get(i), name, i), i == mainImageIndex));
+
+
+		List<AnnounceDate> newAnnounceDates = accommodation.getAnnounces();
+		for (AnnounceDate announceDate : old.getAnnounces()) {
+			if (!accommodation.getAnnounces().contains(announceDate)) {
+				if (old.getReservations().stream()
+						.anyMatch(reservation ->
+								reservation.getStartDate().isAfter(announceDate.getStartDate().minusDays(1))
+										&& reservation.getEndDate().isBefore(announceDate.getEndDate().plusDays(1))
+										&& !reservation.isExpired())) {
+					throw new AnnounceDateConflict("Nem tudsz olyan meghírdetett időpontot megváltoztatni, amire van érvényes foglalás!");
+				}
+			}
+		}
+		old.deleteAnnounceDates();
+		old.setAnnounces(newAnnounceDates);
+		accommodationRepository.save(old);
+	}
+
+	public void deleteAnnounce(AnnounceDate announceDate) {
+
+	}
 }
